[package]
name = "chat_server_mail"
version = "0.1.0"
edition = "2021"

[dependencies]

# actix系列
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4"
actix-web-actors = "4.1.0"

# 数据库
sqlx={version="0.5.10",features=["runtime-tokio-rustls","macros","chrono","sqlite"]}

# 邮箱库
lettre = "0.11.3"
lettre_email = "0.9.4"


# serde系列 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }

# html
rtml = "0.17.0"
